tests/rosetta/out/Zig/address-of-a-variable.error
zig build: exit status 1
/tmp/address-of-a-variable.zig:4:5: error: variable of type 'comptime_float' must be const or comptime
/tmp/address-of-a-variable.zig:4:5: note: to modify this variable at runtime, it must be given an explicit fixed-size number type
