tests/rosetta/out/Zig/address-of-a-variable.zig
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:59:58Z
const std = @import("std");

var myVar = 3.14; // f64

pub fn main() void {
    std.debug.print("value as float: {d:.1}\n", .{myVar});
    std.debug.print("address: <not available>\n", .{});
}
